Fix navbar overlap

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -89,6 +89,7 @@ abbr[title]
 
 .navbar
 {
+  position: static;
   margin-bottom: -10px;
   border-bottom-width: 10px;
   border-bottom-style: solid;
